make compatible with java 11